# Autobot

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  router.py  search.py  vehicles.py  widget.py
backend/app/core/: exceptions.py  middleware.py  rate_limiter.py  security.py
backend/app/db/: engine.py  session.py
backend/app/models/: __init__.py  api_key.py  conversation.py  document.py  document_chunk.py  search_log.py  tenant.py  user.py  vehicle.py
backend/app/schemas/: auth.py  common.py  document.py  search.py  vehicle.py
backend/app/services/: chunker.py  csv_importer.py  document_processor.py  embedder.py  llm_client.py  rag_pipeline.py  search_engine.py  storage.py  vin_decoder.py
docker/: docker-compose.dev.yml
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/analytics/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/documents/: page.tsx
frontend/src/app/(dashboard)/inventory/: page.tsx
frontend/src/app/(dashboard)/search/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/hooks/: use-search.ts  use-vehicles.ts
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql
(+3 files in other folders)
